unpackaged/main/default/objects/Account/fields/Active_Employee__c.field-meta.xml
<CustomField>
    <fullName>Active_Employee__c</fullName>
    <label>Active Employee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>