unpackaged/main/default/objects/Account/fields/Custom_City__c.field-meta.xml
<CustomField>
    <fullName>Custom_City__c</fullName>
    <label>Custom City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>