unpackaged/main/default/objects/Account/fields/Custom_Country__c.field-meta.xml
<CustomField>
    <fullName>Custom_Country__c</fullName>
    <label>Custom Country</label>
    <length>10</length>
    <type>Text</type>
</CustomField>