unpackaged/main/default/objects/Account/fields/Custom_State__c.field-meta.xml
<CustomField>
    <fullName>Custom_State__c</fullName>
    <label>Custom State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>