unpackaged/main/default/objects/Account/fields/Custom_Zipcode__c.field-meta.xml
<CustomField>
    <fullName>Custom_Zipcode__c</fullName>
    <label>Custom Zipcode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>