unpackaged/main/default/objects/Account/fields/dummy_test__c.field-meta.xml
<CustomField>
    <fullName>dummy_test__c</fullName>
    <label>dummy test</label>
    <length>30</length>
    <type>Text</type>
</CustomField>