unpackaged/main/default/objects/Account/fields/House_Address__c.field-meta.xml
<CustomField>
    <fullName>House_Address__c</fullName>
    <label>House Address</label>
    <type>TextArea</type>
</CustomField>