unpackaged/main/default/objects/Account/fields/Individual_Name__c.field-meta.xml
<CustomField>
    <fullName>Individual_Name__c</fullName>
    <label>Individual Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>