unpackaged/main/default/objects/Account/fields/Individual_Ph_No__c.field-meta.xml
<CustomField>
    <fullName>Individual_Ph_No__c</fullName>
    <label>Individual Ph No</label>
    <type>Phone</type>
</CustomField>