unpackaged/main/default/objects/Account/fields/Org_CEO_Name__c.field-meta.xml
<CustomField>
    <fullName>Org_CEO_Name__c</fullName>
    <label>Org CEO Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>