unpackaged/main/default/objects/Account/fields/Org_Pan_No__c.field-meta.xml
<CustomField>
    <fullName>Org_Pan_No__c</fullName>
    <label>Org PAN No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>