unpackaged/main/default/objects/Account/fields/Org_Registered_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Registered_Address__c</fullName>
    <label>Org Registered Address</label>
    <type>TextArea</type>
</CustomField>