unpackaged/main/default/objects/Account/fields/Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Name__c</fullName>
    <label>Organisation Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>