unpackaged/main/default/objects/Account/fields/Previous_Owner__c.field-meta.xml
<CustomField>
    <fullName>Previous_Owner__c</fullName>
    <label>Previous Owner</label>
    <length>30</length>
    <type>Text</type>
</CustomField>