unpackaged/main/default/objects/Account/recordTypes/Organization.recordType-meta.xml
<RecordType>
    <fullName>Organization</fullName>
    <active>true</active>
    <description>An Account representing an organization</description>
    <label>Organization</label>
</RecordType>